# raztodo

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  junit.xml  pyproject.toml  ruff.toml  ty.toml
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: ci.yml  docker.yml  formatcheck.yml  lint.yml  pr_test.yml  publish.yml  quality.yml  release.yml  test.yml  tests.yml  typecheck.yml
docs/: ARCHITECTURE.md  COMPELETION.md  COMPLETION.md  CONFIGURATION.md  DOCKER.md  EXPLAIN.md  INSTALLATION.md  TESTING.md  USAGE.md
src/raztodo/: __main__.py
src/raztodo/application/: factory.py  use_case_factory.py
src/raztodo/application/queries/: explain_task.py  list_tasks.py
src/raztodo/application/use_cases/: clear_tasks.py  create_task.py  delete_task.py  explain_task.py  export_task.py  import_task.py  list_tasks.py  mark_task_done.py  migrate_tasks.py  search_tasks.py  update_task.py
src/raztodo/assets/: demo.cast  preview.webm
src/raztodo/domain/: exceptions.py  task_entity.py  task_repository.py
src/raztodo/infrastructure/: container.py  logger.py  settings.py  version.py
src/raztodo/infrastructure/llm/: client.py  config.py
src/raztodo/infrastructure/sqlite/: connection.py  migrations.py  task_dao.py  task_mapper.py  task_repository.py  task_schema.py
src/raztodo/presentation/cli/: ansi.py  entrypoint.py  formatters.py  helpers.py  parser.py  protocols.py  router.py
src/raztodo/presentation/cli/commands/: clear_tasks_cmd.py  completion_cmd.py  create_task_cmd.py  delete_task_cmd.py  explain_task_cmd.py  export_task_cmd.py  import_task_cmd.py  list_tasks_cmd.py  mark_task_done_cmd.py  migrate_tasks_cmd.py  search_tasks_cmd.py  update_task_cmd.py
src/raztodo/presentation/cli/handlers/: clear_tasks_handler.py  completion.py  create_task_handler.py  delete_task_handler.py  explain_task_handler.py  export_task_handler.py  import_task_handler.py  list_tasks_handler.py  mark_task_done_handler.py  migrate_tasks_handler.py  search_tasks_handler.py  update_task_handler.py
src/raztodo/presentation/web/: __main__.py  app.py  dependencies.py  main.py  schemas.py  ui.py
src/raztodo/presentation/web/routes/: explain.py  tasks.py
src/raztodo/presentation/web/static/: app.js  style.css
src/raztodo/presentation/web/static/css/: style.css
src/raztodo/presentation/web/static/js/: app.js
src/raztodo/presentation/web/static/js/explain/: index.js  modal.js
src/raztodo/presentation/web/static/js/shared/: api.js  state.js  theme.js  toast.js
src/raztodo/presentation/web/static/js/tasks/: actions.js  edit.js  index.js  render.js
src/raztodo/presentation/web/templates/: index.html
src/tests/presentation/web/: test_tasks_routes.py
tests/: __init__.py  conftest.py
tests/application/: __init__.py  test_factory.py  test_use_case_factory.py
tests/application/queries/: test_explain_task.py  test_export_tasks.py  test_list_tasks.py  test_search_tasks.py
tests/application/use_cases/: __init__.py  test_clear_tasks.py  test_create_task.py  test_delete_task.py  test_explain_task.py  test_export_task.py  test_import_task.py  test_import_tasks.py  test_list_tasks.py  test_mark_task_done.py  test_migrate_tasks.py  test_search_tasks.py  test_update_task.py
tests/domain/: __init__.py  test_exceptions.py  test_task_entity.py
tests/infrastructure/: __init__.py  test_container.py  test_settings.py  test_version.py
tests/infrastructure/llm/: test_client.py  test_config.py
tests/infrastructure/sqlite/: __init__.py  test_connection.py  test_migrations.py  test_task_dao.py  test_task_mapper.py  test_task_repository.py  test_task_schema.py
tests/presentation/cli/: test_ansi.py  test_helpers.py  test_router.py
tests/presentation/web/: test_app.py  test_dependencies.py  test_styles.py  test_tasks_routes.py  test_ui.py
tests/presentation/web/routes/: test_explain.py  test_tasks.py
