[project]
name = "raztodo"
version = "0.6.0"
description = "A fast, local-first task manager with a CLI and an optional web UI, backed by SQLite"
keywords = ["cli", "todo", "task-manager", "sqlite", "productivity", "web-ui", "local-first"]
maintainers = [{ name = "Raz", email = "real.raz.dev@gmail.com" }]
license = "MIT"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
dependencies = ["raztint"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Environment :: Console",
    "Topic :: Utilities",
]


[project.urls]
Homepage = "https://github.com/razbuild/raztodo"
Documentation = "https://github.com/razbuild/raztodo#readme"
Repository = "https://github.com/razbuild/raztodo"
Issues = "https://github.com/razbuild/raztodo/issues"
Changelog = "https://github.com/razbuild/raztodo/releases"


[project.scripts]
rt = "raztodo.__main__:main"
rt-web = "raztodo.presentation.web.__main__:main"


[project.optional-dependencies]
web = [
    "fastapi>=0.136.3",
    "uvicorn[standard]>=0.49.0",
    "httpx2>=2.4.0",
]
completion = [
    "argcomplete",
]


[build-system]
requires = ["uv_build >= 0.11.24, < 0.12.0"]
build-backend = "uv_build"


[dependency-groups]
dev = ["pytest", "ruff", "ty", "coverage", "httpx2"]
test = ["pytest", "httpx2"]
coverage = ["coverage"]


[tool.pytest.ini_options]
addopts = ["--strict-config", "--strict-markers"]
xfail_strict = true
filterwarnings = ["error"]


[tool.coverage.run]
branch = true
source = ["src/raztodo"]
disable_warnings = ["no-data-collected"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/__init__.py",
    "*/__main__.py",
    "*/presentation/cli/helpers.py",
    "*/presentation/cli/commands/*",
    "*/presentation/cli/entrypoint.py",
    "*/presentation/cli/parser.py",
]


[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
    "def __repr__",
    "def __str__",
    "if __name__ == .__main__.:",
    "class.*Error.*:",
    "raise.*Error",
    "pass$",
]
precision = 2
show_missing = true
skip_covered = false
skip_empty = true
