[project]
name = "raztodo"
version = "0.7.0"
description = "Modular task manager with a shared core and optional CLI, web UI, and shell completion components."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = "MIT"
maintainers = [{ name = "Raz", email = "real.raz.dev@gmail.com" }]
keywords = ["cli", "todo", "task-manager", "sqlite", "productivity", "web-ui", "local-first"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Utilities",
]
dependencies = ["raztint"]

[project.urls]
Homepage = "https://github.com/razbuild/raztodo"
Documentation = "https://github.com/razbuild/raztodo#readme"
Repository = "https://github.com/razbuild/raztodo"
Issues = "https://github.com/razbuild/raztodo/issues"
Changelog = "https://github.com/razbuild/raztodo/releases"

[project.scripts]
rt = "raztodo.__main__:main"
rt-web = "raztodo.presentation.web.__main__:main"

[project.optional-dependencies]
web = [
    "fastapi>=0.138.0",
    "uvicorn[standard]>=0.49.0",
    "httpx2>=2.4.0",
]
completion = [
    "argcomplete",
]
all = [
    "fastapi>=0.138.0",
    "uvicorn[standard]>=0.49.0",
    "httpx2>=2.4.0",
    "argcomplete",
]

[build-system]
requires = ["uv_build >= 0.11.24, < 0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pytest", "ruff", "ty", "coverage", "httpx2"]
test = ["pytest", "httpx2"]
coverage = ["coverage"]

[tool.pytest.ini_options]
addopts = ["--strict-config", "--strict-markers"]
xfail_strict = true
filterwarnings = ["error"]

[tool.coverage.run]
branch = true
source = ["src/raztodo"]
disable_warnings = ["no-data-collected"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/__init__.py",
    "*/__main__.py",
    "*/presentation/cli/helpers.py",
    "*/presentation/cli/commands/*",
    "*/presentation/cli/entrypoint.py",
    "*/presentation/cli/parser.py",
]

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
    "def __repr__",
    "def __str__",
    "if __name__ == .__main__.:",
    "class.*Error.*:",
    "raise.*Error",
    "pass$",
]
precision = 2
show_missing = true
skip_covered = false
skip_empty = true
